using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;

public static class AnimatorEnumeration {
    public static string Attack = "attack";
    public static string Died = "died";
    public static string Spell = "spell";
    public static string IsRun = "isRun";
}

